@startuml

title __SERVICE's Class Diagram__\n

  package com.infosupport.poc.ddd.service {
    class AppConfig {
        + forwardDateService()
    }
  }
  

  package com.infosupport.poc.ddd.service {
    class BusinessRuleInvocation {
        - params : List<String>
        + BusinessRuleInvocation()
        + getRule()
        + setRule()
        + getParams()
        + setParams()
    }
  }
  

  package com.infosupport.poc.ddd.service {
    interface BusinessRuleService {
        {abstract} + execute()
    }
  }
  

  package com.infosupport.poc.ddd.service {
    class BusinessRuleServiceImpl {
        + execute()
    }
  }
  

  package com.infosupport.poc.ddd.service {
    class LogTracerImpl {
        - logger : Logger
        + LogTracerImpl()
        + trace()
    }
  }
  

  package com.infosupport.poc.ddd.service {
    class PaymentInstructionFactory {
        + createPaymentInstructionDO()
        + createPaymentInstructionDTO()
    }
  }
  

  package com.infosupport.poc.ddd.service {
    interface PaymentInstructionService {
        {abstract} + addPayment()
        {abstract} + editPayment()
    }
  }
  

  package com.infosupport.poc.ddd.service {
    class PaymentInstructionServiceImpl {
        + addPayment()
        + editPayment()
    }
  }
  

  BusinessRuleInvocation o-- SemanticBusinessRuleKey : rule
  BusinessRuleServiceImpl -up-|> BusinessRuleService
  LogTracerImpl -up-|> Tracer
  PaymentInstructionFactory o-- ForwardDateService : forwardDateService
  PaymentInstructionServiceImpl -up-|> PaymentInstructionService
  PaymentInstructionServiceImpl o-- PaymentInstructionRepository : paymentInstructionRepository
  PaymentInstructionServiceImpl o-- PaymentInstructionFactory : paymentInstructionFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
